--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='0' y='0' width='64' height='64' rx='16' fill='%230e64d1'/%3E%3Ccircle cx='32' cy='24' r='14' fill='%23ffffff'/%3E%3Cpath d='M14 56 C14 40 50 40 50 56 V64 H14 Z' fill='%23ffffff'/%3E%3C/svg%3E">
 </head>
 <body>
     <div class="main">
